<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/splash_logo_description"/>

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/splash_title"
        android:textColor="?attr/textFillColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/splash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/splash_text"
        android:textColor="?attr/textFillColor"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/splashimage"
        android:contentDescription="@string/splash_image_description"/>

</androidx.appcompat.widget.LinearLayoutCompat>